kubernetes/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cobble-bot
spec:
  selector:
    app: cobble-bot
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
