kubernetes/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cobble-bot
  labels:
    route53: cobble
spec:
  rules:
    - host: "cobble.zgamelogic.com"
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: cobble-bot
                port:
                  number: 8080
  tls:
    - hosts:
        - "cobble.zgamelogic.com"
      secretName: ingress-tls
